--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="/nobita.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Birthday My Gorgeous💕</h3>
+          <h3 class="wish-hbd">Happy Birthday My Gorgeous ❤</h3>
           <h5 id="wishText">~Bhabani</h5>
         </div>
       </div>
