--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="one">
         <h1 class="one">
           
-          <span id="name">Love</span>
+          <span id="name">Bibidha</span>
         </h1>
         <p class="two" id="greetingText">I really like your name jii😘</p>
       </div>
       <div class="three">
-        <p>It's your Birthday!!! <3</p>
+        <p>It's your Birthday!!!🎂🎂</p>
       </div>
       <div class="four">
         <div class="text-box">
