--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Birthday Bibidha🎂💖</title>
+    <title>Happy Birthday🎂💖</title>
     <link
       rel="stylesheet"
     />
@@ -17,9 +17,9 @@
       <div class="one">
         <h1 class="one">
           
-          <span id="name">Bibidha</span>
+          <span id="name">Love</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name jii😘</p>
+        <p class="two" id="greetingText">I really like your name</p>
       </div>
       <div class="three">
         <p>It's your Birthday!!!🎂🎂</p>
@@ -33,10 +33,10 @@
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
+        <p class="idea-1"> I was going to do that.</p>
         <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
-          I realized, I wanted to do something <strong>special</strong>.
+          I realized I wanted to do something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
