--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="one">
         <h1 class="one">
           
-          <span id="name">Love</span>
+          <span id="name">Bibidha</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name</p>
+        <p class="two" id="greetingText">I really like your name jii 😍😍</p>
       </div>
       <div class="three">
         <p>It's your Birthday!!!🎂🎂</p>
